Feature adding java classes (#6) [release-type final]
* first commit

code compiles
most documentation updated
still need to update flows description in documentation
still need to check swagger is produced correctly as a result of build
output
code hasn’t actually been checked/validated against anything anywhere
else

* pom typos and circle 2.0

* typo

* correct base paths and drop dependency on Electrum Msg SDK

* Fixes for hugo

* This should not be here.

* Hugo doc corrections

* aligned with v1.0.4 of swagger

* back to circle 1.0 and build 1.0.0-RC1

* ain't nobody got time for docs 

* maybe working now 

* rename to money-transfer-retailer-interface

* producing .tar.gz build output

* v0.0.1-RC1 

* v0.0.1-RC2 

- newCustomer flag
- annotation to indicate GET customer produces JSON

* bump base API to 3.5.0 

* version to v1.0.0

- update version in resource paths
- set repo to oss-local

* v1.0.0-RC2 

* review comments

* may have fixed the swagger generation

* v1.0.0-RC3 replaced some literals with constants 

* v1.0.0-RC3 damn hugo

* still trying to build v1.0.0-RC3 

* v1.0.0-RC3 disable hugo stuff 

* find and replace fail

* version to final
